--- a/Stock_Portfolio_Optimizer.ipynb
+++ b/Stock_Portfolio_Optimizer.ipynb
@@ -6,8 +6,7 @@
       "name": "Stock_Portfolio_Optimizer.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPmVoMbL2bQJpBXhFYwmNsi",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyONxDFCqYdDbn8MuwBkaGOn"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/michmuliana/Data-Science-Portfolio/blob/master/Stock_Portfolio_Optimizer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -47,11 +36,9 @@
         "#Import libraries\r\n",
         "import pandas as pd\r\n",
         "import numpy as np\r\n",
-        "import requests\r\n",
-        "import io\r\n",
         "import yfinance as yf"
       ],
-      "execution_count": 31,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -64,7 +51,7 @@
         "tickers_list = ['AAPL', 'WMT', 'IBM', 'MU', 'BA', 'AXP', 'TSLA', 'ETSY',\r\n",
         "                'NVDA', 'PYPL', 'FCX', 'MMM', 'ACN', 'ADBE','GOOG']\r\n"
       ],
-      "execution_count": 43,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -74,12 +61,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fce421b0-7123-446d-a808-341d3265fc96"
+        "outputId": "523f215e-4503-432a-ed8f-ef9869a4bc9f"
       },
       "source": [
         "df = yf.download(tickers_list,'2015-1-1')['Adj Close']"
       ],
-      "execution_count": 44,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,12 +85,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 640
         },
-        "outputId": "ba3f2df2-dee3-4722-ba71-92c028cc27e4"
+        "outputId": "d545c0d3-724d-4265-f873-566a9e8143b4"
       },
       "source": [
         "df"
       ],
-      "execution_count": 45,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +374,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 80
         }
       ]
     },
@@ -400,7 +387,7 @@
         "#Get the assets /tickers\r\n",
         "assets = df.columns"
       ],
-      "execution_count": 47,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -410,28 +397,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zXDt1ffkQxUj",
-        "outputId": "211a495f-22ec-4514-8cac-237c2cd392d5"
+        "outputId": "9c363ed2-3b06-4732-cfcb-dee93d62b3c1"
       },
       "source": [
         "pip install PyPortfolioOpt"
       ],
-      "execution_count": 49,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: PyPortfolioOpt in /usr/local/lib/python3.6/dist-packages (1.4.1)\n",
-            "Requirement already satisfied: scipy<2.0,>=1.3 in /usr/local/lib/python3.6/dist-packages (from PyPortfolioOpt) (1.4.1)\n",
-            "Requirement already satisfied: pandas>=0.19 in /usr/local/lib/python3.6/dist-packages (from PyPortfolioOpt) (1.1.5)\n",
             "Requirement already satisfied: cvxpy<2.0.0,>=1.1.10 in /usr/local/lib/python3.6/dist-packages (from PyPortfolioOpt) (1.1.10)\n",
+            "Requirement already satisfied: pandas>=0.19 in /usr/local/lib/python3.6/dist-packages (from PyPortfolioOpt) (1.1.5)\n",
+            "Requirement already satisfied: scipy<2.0,>=1.3 in /usr/local/lib/python3.6/dist-packages (from PyPortfolioOpt) (1.4.1)\n",
             "Requirement already satisfied: numpy<2.0,>=1.12 in /usr/local/lib/python3.6/dist-packages (from PyPortfolioOpt) (1.19.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->PyPortfolioOpt) (2.8.1)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->PyPortfolioOpt) (2018.9)\n",
             "Requirement already satisfied: ecos>=2 in /usr/local/lib/python3.6/dist-packages (from cvxpy<2.0.0,>=1.1.10->PyPortfolioOpt) (2.0.7.post1)\n",
             "Requirement already satisfied: scs>=1.1.6 in /usr/local/lib/python3.6/dist-packages (from cvxpy<2.0.0,>=1.1.10->PyPortfolioOpt) (2.1.2)\n",
             "Requirement already satisfied: osqp>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from cvxpy<2.0.0,>=1.1.10->PyPortfolioOpt) (0.6.2.post0)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.7.3->pandas>=0.19->PyPortfolioOpt) (1.15.0)\n",
-            "Requirement already satisfied: qdldl in /usr/local/lib/python3.6/dist-packages (from osqp>=0.4.1->cvxpy<2.0.0,>=1.1.10->PyPortfolioOpt) (0.1.5.post0)\n"
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->PyPortfolioOpt) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.19->PyPortfolioOpt) (2.8.1)\n",
+            "Requirement already satisfied: qdldl in /usr/local/lib/python3.6/dist-packages (from osqp>=0.4.1->cvxpy<2.0.0,>=1.1.10->PyPortfolioOpt) (0.1.5.post0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.7.3->pandas>=0.19->PyPortfolioOpt) (1.15.0)\n"
           ],
           "name": "stdout"
         }
@@ -448,7 +435,7 @@
         "from pypfopt import risk_models\r\n",
         "from pypfopt import expected_returns"
       ],
-      "execution_count": 52,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -461,7 +448,7 @@
         "mu = expected_returns.mean_historical_return(df) #Expected returns\r\n",
         "S = risk_models.sample_cov(df) #Sample covariance matrix"
       ],
-      "execution_count": 56,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -471,7 +458,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zx6h0K_NSz2k",
-        "outputId": "c23c3647-0ea8-452f-b870-6f98f9943457"
+        "outputId": "e17f9c5c-7a94-42eb-c370-15921cac4583"
       },
       "source": [
         "#Optimize for the maximal Sharpe ratio\r\n",
@@ -485,7 +472,7 @@
         "#Show expected returns, volatility and sharpe ratio\r\n",
         "ef.portfolio_performance(verbose=True)"
       ],
-      "execution_count": 58,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +494,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 58
+          "execution_count": 85
         }
       ]
     },
@@ -527,25 +514,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WsmewCFFUMKs",
-        "outputId": "89464ab7-3f31-49be-b4c7-3f2aa8da9bae"
+        "outputId": "6aa58689-81c4-4259-c30d-40e0ac3575c5"
       },
       "source": [
         "pip install pulp"
       ],
-      "execution_count": 59,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting pulp\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/14/c4/0eec14a0123209c261de6ff154ef3be5cad3fd557c084f468356662e0585/PuLP-2.4-py3-none-any.whl (40.6MB)\n",
-            "\u001b[K     |████████████████████████████████| 40.6MB 100kB/s \n",
-            "\u001b[?25hCollecting amply>=0.1.2\n",
-            "  Downloading https://files.pythonhosted.org/packages/f3/c5/dfa09dd2595a2ab2ab4e6fa7bebef9565812722e1980d04b0edce5032066/amply-0.1.4-py3-none-any.whl\n",
-            "Requirement already satisfied: pyparsing in /usr/local/lib/python3.6/dist-packages (from amply>=0.1.2->pulp) (2.4.7)\n",
+            "Requirement already satisfied: pulp in /usr/local/lib/python3.6/dist-packages (2.4)\n",
+            "Requirement already satisfied: amply>=0.1.2 in /usr/local/lib/python3.6/dist-packages (from pulp) (0.1.4)\n",
             "Requirement already satisfied: docutils>=0.3 in /usr/local/lib/python3.6/dist-packages (from amply>=0.1.2->pulp) (0.16)\n",
-            "Installing collected packages: amply, pulp\n",
-            "Successfully installed amply-0.1.4 pulp-2.4\n"
+            "Requirement already satisfied: pyparsing in /usr/local/lib/python3.6/dist-packages (from amply>=0.1.2->pulp) (2.4.7)\n"
           ],
           "name": "stdout"
         }
@@ -558,7 +540,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xhawk-odU4Q7",
-        "outputId": "dea0ea2d-63fb-4c53-c0da-aee476d676b1"
+        "outputId": "6e1997ba-a02d-4d45-e94c-cfa5d3ba93ca"
       },
       "source": [
         "#Get the discrete allocation of each share per stock\r\n",
@@ -573,7 +555,7 @@
         "print('Discrete allocation:', allocation)\r\n",
         "print('Funds Remaining: $', leftover)"
       ],
-      "execution_count": 68,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +581,7 @@
         "    if r['symbol']==symbol:\r\n",
         "      return r['name']"
       ],
-      "execution_count": 70,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -613,7 +595,7 @@
         "for symbol in allocation:\r\n",
         "  company_name.append( get_company_name(symbol))"
       ],
-      "execution_count": 71,
+      "execution_count": 89,
       "outputs": []
     },
     {
@@ -627,7 +609,7 @@
         "for symbol in allocation:\r\n",
         "  discrete_allocation_list.append(allocation.get(symbol))"
       ],
-      "execution_count": 73,
+      "execution_count": 90,
       "outputs": []
     },
     {
@@ -639,7 +621,7 @@
         "#Create a dataframe for the portfolio\r\n",
         "portfolio_df = pd.DataFrame(columns = ['Company_name', 'Company_Ticker', 'Discrete_val_' +str(portfolio_val)])"
       ],
-      "execution_count": 74,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -652,7 +634,7 @@
         "portfolio_df['Company_Ticker'] = allocation\r\n",
         "portfolio_df['Discrete_val_'+str(portfolio_val)] = discrete_allocation_list"
       ],
-      "execution_count": 75,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -663,13 +645,13 @@
           "height": 173
         },
         "id": "NP6n4LDTZ9SZ",
-        "outputId": "7ada5645-d566-4d6c-e9ab-42f2724ccc7e"
+        "outputId": "e0aa5a23-3f01-491c-f40a-ce71e27ecfb9"
       },
       "source": [
         "#Show the portfolio\r\n",
         "portfolio_df"
       ],
-      "execution_count": 76,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +720,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 93
         }
       ]
     },
