--- a/Stock_Price_Prediction.ipynb
+++ b/Stock_Price_Prediction.ipynb
@@ -6,8 +6,7 @@
       "name": "Stock_Price_Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEFvDdYeWXgIuiBGyuXGlu",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPNL93qZZkdcX4DrEThaK8+"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/michmuliana/Data-Science-Portfolio/blob/master/Stock_Price_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -965,7 +954,7 @@
         "id": "a91WkTbg-6lf"
       },
       "source": [
-        "So here the predicted stock price for apple is 138 and the actual price is 129 for this model which shows that there a small difference in values."
+        "So here the predicted stock price for apple is 138 and the actual price is 129 for this model which shows that the prediction is still reliable with the small difference in values."
       ]
     },
     {
