--- a/twitter_sentiment_analysis.ipynb
+++ b/twitter_sentiment_analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "twitter-sentiment-analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNrh4Hi10GM9JvCwG8fxteZ"
+      "authorship_tag": "ABX9TyM3iYjeE2wq576Bn87Hn4ZG"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,15 +22,16 @@
       "source": [
         "# Twitter Sentiment Analysis\r\n",
         "\r\n",
-        "With a huge number of daily posts on social networks, extracting opinion is a challenging tasks which shows that sentimental analysis is an important area to research on. \r\n",
+        "With a huge number of daily posts on social networks, extracting opinion is a challenging task which shows that sentimental analysis is an important area to research\r\n",
         "\r\n",
         "There are many domains where sentimental analysis can be applied on:\r\n",
         "\r\n",
-        "* **Business:** : In marketing field companies use it to develop their strategies, to understand customers’ feelings towards products or brand, how people respond to their campaigns or product launches and why consumers don’t buy some\r\n",
+        "* **Business:** In the marketing field companies use it to develop their strategies, to understand customers’ feelings towards products or brands, how people respond to their campaigns or product launches and why consumers don’t buy some\r\n",
         "products.\r\n",
-        "* **Politics:**  In political field, it is used to keep track of political view, to detect consistency and inconsistency between statements and actions at the government level. It can be used to predict election results as well.\r\n",
-        "* **Public Actions:** Sentiment analysis also is used to monitor and analyse social phenomena, for the spotting of potentially dangerous situations and determining the general mood of the blogosphere.\r\n",
-        "This is a sentiment analysis program that parses the tweets fetched from Twitter using Python. The analysis is about predicting whether the tweets indicates a positive, negative or neutral sentiment. This can also be known as opinion mining, deriving the opinion or attitude of a speaker. \r\n",
+        "* **Politics:**  In the political field, it is used to keep track of political views, to detect consistency and inconsistency between statements and actions at the government level. It can be used to predict election results as well.\r\n",
+        "* **Public Actions:** Sentiment analysis also is used to monitor and analyze social phenomena, for the spotting of potentially dangerous situations and determining the general mood of the blogosphere.\r\n",
+        "\r\n",
+        "This is a sentiment analysis program parses the tweets fetched from Twitter using Python. The analysis is about predicting whether the tweets indicate a positive, negative or neutral sentiment. This can also be known as opinion mining, deriving the opinion or attitude of a speaker. \r\n",
         "\r\n",
         "There are many methods and algorithms to implement sentiment-analysis systems, which can be classified as:\r\n",
         "\r\n",
